WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299705
AX: page sometimes points to wrong isolated tree with ENABLE_ACCESSIBILITY_LOCAL_FRAME=1
https://bugs.webkit.org/show_bug.cgi?id=299705
Summary
AX: page sometimes points to wrong isolated tree with ENABLE_ACCESSIBILITY_LO...
Dominic Mazzoni
Reported
2025-09-28 11:41:05 PDT
Needed for site isolation. An isolated tree is registering itself with WKAccessibilityWebPageObjectBase, but if there's more than one isolated tree (when ENABLE_ACCESSIBILITY_LOCAL_FRAME=1, which will be needed for site isolation) then only the main frame should be registered.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-28 11:41:48 PDT
<
rdar://problem/161522668
>
Dominic Mazzoni
Comment 2
2025-09-28 14:22:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51473
EWS
Comment 3
2025-10-07 11:45:08 PDT
Committed
301150@main
(cba49fa3cb98): <
https://commits.webkit.org/301150@main
> Reviewed commits have been landed. Closing PR #51473 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug