AX: page sometimes points to wrong isolated tree with ENABLE_ACCESSIBILITY_LOCAL_FRAME=1 https://bugs.webkit.org/show_bug.cgi?id=299705 rdar://161522668

Reviewed by Tyler Wilcock.

An isolated tree is registering itself with
WKAccessibilityWebPageObjectBase, but if there's more than one
isolated tree (when ENABLE_ACCESSIBILITY_LOCAL_FRAME=1, which will be
needed for site isolation) then only the main frame should be
registered. Without this fix, VoiceOver sometimes lands on an iframe with no
way to get to the main page.

Not covered by tests because they seem to go through _WKAccessibilityRootObjectForTesting
instead.

* Source/WebKit/WebProcess/WebPage/mac/WKAccessibilityWebPageObjectBase.mm:
(-[WKAccessibilityWebPageObjectBase setIsolatedTree:]):

Canonical link: https://commits.webkit.org/301150@main